# adl-rs

./: Cargo.toml
adl-sys/: Cargo.toml  build.rs  wrapper.h
adl-sys/include/: adl_defines.h
adl-sys/src/: lib.rs  macros.rs
src/: error.rs  lib.rs
