[package]
name = "adl"
version = "0.1.0"
authors = ["Mathieu Amiot <m.amiot@otak-arts.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adl-sys = { version = "0.1", path = "adl-sys" }
libloading = "0.6.2"
anyhow = "1.0.32"
thiserror = "1.0.20"
