[package]
name = "adl-sys"
version = "0.1.0"
authors = ["Mathieu Amiot <m.amiot@otak-arts.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.6.2"
libc = "0.2.74"

[build-dependencies]
bindgen = "0.54"
